--- a/src/languages/ui/fi.json
+++ b/src/languages/ui/fi.json
@@ -135,6 +135,7 @@
   "journey.health.stop_events_not_found": "Pysäkkitapahtumia ei löydetty.",
   "journey.health.stop_event_missing": "Pysäkkitapahtuma puuttuu pysäkille",
   "journey.health.stop_event_virtual": "Pysäkkitapahtumat luotu ajoneuvon paikkatiedoista pysäkille",
+  "journey.health.average_delay": "Tietojen viiveen keskiarvo",
 
   "domain.line": "Linja",
   "domain.route": "Reitti",
