--- a/src/languages/help/fi.json
+++ b/src/languages/help/fi.json
@@ -51,6 +51,7 @@
   "Create user": "Luo HSL ID-tunnus kirjautuaksesi palveluun.",
   "Focus on stop": "Kohdista pysäkkiin klikkaamalla.",
   "Show info": "Näytä tai piilota käyttöohjeet.",
+  "Data delay": "Tietojen viive tarkoittaa ero tapahtuman tallennushetkeltä tapahtuman vastaanottohetkeen. Suuri viive ei tarkoita että tiedot olisi virheellisiä.",
 
   "PDE": "Lähtö, ovet laitettu kiinni.",
   "DEP": "Lähtö, ajoneuvo poistunut pysäkkialueelta.",
