--- a/src/languages/ui/en.json
+++ b/src/languages/ui/en.json
@@ -21,6 +21,7 @@
   "filterpanel.real_start_time": "Observed start time",
   "filterpanel.journey.unrealized": "Unrealized",
   "filterpanel.journey.no_data": "Data missing",
+  "filterpanel.journey.no_departure": "No departure data",
   "filterpanel.journey.incomplete_data": "Incomplete data",
   "filterpanel.journey.click_to_fetch": "Fetch",
   "filterpanel.clear.stop": "Clear stop",
@@ -165,7 +166,7 @@
   "general.day": "day",
   "general.week": "week",
   "general.today": "Today",
-  "general.seconds.short": "sec.",
+  "general.seconds.short": "sec",
   "general.loading": "Loading",
   "general.error": "Error",
   "general.journey": "journey",
@@ -187,6 +188,7 @@
   "general.previous.plural": "Previous",
   "general.unknown": "Unknown",
   "general.contact.team": "Ask for help or report problems",
+  "general.delay": "Delay",
 
   "message.emptyview.network": "The data in this view is unavailable due to a network issue. Make sure you are online and try again.",
   "message.emptyview.authentication": "You need to be logged in to get access to the data in this view, or this account is not authorized.",
