--- a/src/languages/ui/se.json
+++ b/src/languages/ui/se.json
@@ -21,6 +21,7 @@
   "filterpanel.real_start_time": "Realiserad starttid",
   "filterpanel.journey.unrealized": "Ogenomförd",
   "filterpanel.journey.no_data": "Information fattas",
+  "filterpanel.journey.no_departure": "Avgång fattas",
   "filterpanel.journey.incomplete_data": "Ofullständig data",
   "filterpanel.journey.click_to_fetch": "Hämta",
   "filterpanel.clear.stop": "Återställ hållplats",
@@ -164,7 +165,7 @@
   "general.day": "dag",
   "general.week": "vecka",
   "general.today": "Idag",
-  "general.seconds.short": "sek.",
+  "general.seconds.short": "sek",
   "general.loading": "Laddar",
   "general.error": "Fel",
   "general.journey": "resa",
@@ -186,6 +187,7 @@
   "general.previous.plural": "Föregående",
   "general.unknown": "Okänd",
   "general.contact.team": "Be om hjälp eller rapportera problem",
+  "general.delay": "Dröjsmål",
 
   "message.emptyview.network": "Denna vy är tom på grund av ett nätfel. Försökra dig om att du har en aktiv nätförbindelse och prova sedan igen.",
   "message.emptyview.authentication": "Datan i denna vy kräver inloggning, eller så har ditt konto inte rättighet.",
