--- a/src/languages/ui/fi.json
+++ b/src/languages/ui/fi.json
@@ -167,7 +167,7 @@
   "general.day": "päivä",
   "general.week": "viikko",
   "general.today": "Tänään",
-  "general.seconds.short": "sek.",
+  "general.seconds.short": "sek",
   "general.loading": "Ladataan",
   "general.error": "Virhe",
   "general.journey": "lähtö",
@@ -189,6 +189,7 @@
   "general.previous.plural": "Edelliset",
   "general.unknown": "Ei tiedossa",
   "general.contact.team": "Kysy apua tai raportoi ongelmia",
+  "general.delay": "Viive",
 
   "message.emptyview.network": "Verkko-ongelman takia tämä näkymä ei ole saatavilla. Varmista että sinulla on yhteys verkkoon ja kokeile uudelleen.",
   "message.emptyview.authentication": "Tämän näkymän tiedot vaatii kirjautumista, tai tililläsi ei ole vaadittu oikeustaso.",
