--- a/src/languages/ui/se.json
+++ b/src/languages/ui/se.json
@@ -189,6 +189,8 @@
   "general.unknown": "Okänd",
   "general.contact.team": "Be om hjälp eller rapportera problem",
   "general.delay": "Dröjsmål",
+  "general.subjects": "Påverkade",
+  "general.subjects.count": "påverkade",
 
   "message.emptyview.network": "Denna vy är tom på grund av ett nätfel. Försökra dig om att du har en aktiv nätförbindelse och prova sedan igen.",
   "message.emptyview.authentication": "Datan i denna vy kräver inloggning, eller så har ditt konto inte rättighet.",
