Translate login/logout events.

--- a/src/languages/ui/en.json
+++ b/src/languages/ui/en.json
@@ -98,8 +98,8 @@
   "journey.event.WAIT": "Waiting at stop",
   "journey.event.TLR": "Traffic light priority event",
   "journey.event.TLA": "Traffic light priority request answered",
-  "journey.event.DA": "Driver signs into vehicle",
-  "journey.event.DOUT": "Driver signs out of vehicle",
+  "journey.event.DA": "Driver signed in",
+  "journey.event.DOUT": "Driver signed out",
   "journey.event.BA": "Driver signs into departure block",
   "journey.event.BOUT": "Driver signs out of departure block",
   "journey.event.VJA": "Driver signs into departure",
