--- a/src/languages/ui/fi.json
+++ b/src/languages/ui/fi.json
@@ -99,8 +99,8 @@
   "journey.event.WAIT": "Odottaa pysäkillä",
   "journey.event.TLR": "Liikennevaloetuus&shy;tapahtuma",
   "journey.event.TLA": "Liikennevalokojeen vastaus",
-  "journey.event.DA": "Kuljettaja kirjautunut ajoneuvoon",
-  "journey.event.DOUT": "Kuljettaja kirjautunut ulos ajoneuvosta",
+  "journey.event.DA": "Kuljettaja kirjautunut sisään",
+  "journey.event.DOUT": "Kuljettaja kirjautunut ulos",
   "journey.event.BA": "Kuljettaja valinnut lähtöketjun",
   "journey.event.BOUT": "Kuljettaja kirjautunut ulos lähtöketjusta",
   "journey.event.VJA": "Kuljettaja kirjautunut lähtöön",
