--- a/src/languages/ui/en.json
+++ b/src/languages/ui/en.json
@@ -45,6 +45,7 @@
   "map.stops.show_in_streetview": "Show in street view",
   "map.stops.doors_not_open": "The doors did not open at this stop.",
   "map.stops.select_stop": "Select stop",
+  "map.stops.stop_routes_select": "The routes for this stop. Select a route to view its timetables through this stop.",
   "map.road": "Road",
   "map.aerial": "Aerial map",
   "map.weather": "Weather",
