--- a/src/languages/ui/fi.json
+++ b/src/languages/ui/fi.json
@@ -45,6 +45,7 @@
   "map.stops.show_in_streetview": "Näytä katunäkymässä",
   "map.stops.doors_not_open": "Ovet eivät avautuneet tällä pysäkillä.",
   "map.stops.select_stop": "Valitse pysäkki",
+  "map.stops.stop_routes_select": "Pysäkin reitit. Valitse reitti nähdäksesi sen aikataulut tästä pysäkiltä.",
   "map.road": "Tie",
   "map.aerial": "Ilmakartta",
   "map.weather": "Sää",
