Show terminals in stop input, more generous list limits.

--- a/src/languages/ui/en.json
+++ b/src/languages/ui/en.json
@@ -27,6 +27,8 @@
   "filterpanel.clear.stop": "Clear stop",
   "filterpanel.clear.vehicle": "Clear vehicle",
   "filterpanel.clear.route": "Clear route",
+  "filterpanel.stops": "Stops",
+  "filterpanel.terminals": "Terminals",
 
   "sidepanel.tabs.journeys": "Journeys",
   "sidepanel.tabs.week_journeys": "Week",
