--- a/src/languages/ui/en.json
+++ b/src/languages/ui/en.json
@@ -123,10 +123,12 @@
   "journey.health.GPS": "GPS",
   "journey.health.stops": "Stops",
   "journey.health.positions": "Positions",
+  "journey.health.locType": "Events calculated with GPS",
   "journey.health.firstStopDeparture": "Departure from first stop",
   "journey.health.lastStopArrival": "Arrival to last stop",
   "journey.health.timingStopDepartures": "Departure from timing stops",
   "journey.health.not_complete": "The journey is still ongoing.",
+  "journey.health.not_ok": "Some aspects of the journey data have not passed validation.",
   "journey.health.data_missing": "One or more aspects of the journey data are missing.",
   "journey.health.origin_event_missing": "DEP-event missing from origin stop",
   "journey.health.origin_event_virtual": "DEP-event is derived from vehicle posiitons for origin stop",
