Add TLP property labels in fi & en.

--- a/src/languages/ui/en.json
+++ b/src/languages/ui/en.json
@@ -99,8 +99,8 @@
   "journey.event.PDE": "Departure",
   "journey.event.PAS": "Passed stop without stopping",
   "journey.event.WAIT": "Waiting at stop",
-  "journey.event.TLR": "Traffic light priority event",
-  "journey.event.TLA": "Traffic light priority request answered",
+  "journey.event.TLR": "Traffic light priority request",
+  "journey.event.TLA": "Traffic light priority response",
   "journey.event.DA": "Driver signed in",
   "journey.event.DOUT": "Driver signed out",
   "journey.event.BA": "Driver signs into departure block",
@@ -165,6 +165,15 @@
   "roadcondition.ice": "Ice",
   "roadcondition.damp-salted": "Probably damp and salted",
   "roadcondition.ice-slush": "Ice slush",
+
+  "tlp.requestid":"Request id",
+  "tlp.junctionid":"Sid",
+  "tlp.decision":"Decision",
+  "tlp.attempt":"Attempt",
+  "tlp.type":"Type",
+  "tlp.priority":"Priority",
+  "tlp.reason":"Reason",
+  "tlp.signalgroupnbr":"Signal group number",
 
   "auth.login": "Log in (HSL ID)",
   "auth.logout": "Log out",
