Add swedish trsnslations.

--- a/src/languages/ui/se.json
+++ b/src/languages/ui/se.json
@@ -85,27 +85,29 @@
   "journey.type.signoff": "Inte inloggad",
   "journey.type.journey": "Resa",
 
-  "journey.event.DEP": "Poistuminen pysäkkialueelta",
-  "journey.event.ARR": "Saapuminen pysäkkialueelle",
-  "journey.event.TIMING_STOP_ARR": "Saapuminen pysäkkialueelle",
-  "journey.event.TERMINAL_ARR": "Saapuminen pysäkkialueelle",
-  "journey.event.PLANNED": "Suunniteltu lähtö",
-  "journey.event.CANCELLATION": "Peruutus",
-  "journey.event.DOO": "Ovi auki",
-  "journey.event.DOC": "Ovi kiinni",
-  "journey.event.DUE": "Saapumassa pysäkille",
-  "journey.event.ARS": "Saapuminen",
-  "journey.event.PDE": "Lähtö",
-  "journey.event.PAS": "Ajo pysäkin ohi pysähtymättä",
-  "journey.event.WAIT": "Odottaa pysäkillä",
-  "journey.event.TLR": "Liikennevaloetuus&shy;tapahtuma",
-  "journey.event.TLA": "Liikennevalokojeen vastaus",
+  "journey.event.ALL": "Alla händelser",
+  "journey.event.DEP": "Lämnade hållplatsområdet",
+  "journey.event.ARR": "Anländning till hållplatsområdet",
+  "journey.event.DEPARTURE": "Avgång",
+  "journey.event.TIMING_STOP_ARS": "Anländning",
+  "journey.event.TERMINAL_ARS": "Anländning",
+  "journey.event.PLANNED": "Planerad avgång",
+  "journey.event.CANCELLATION": "Annulering",
+  "journey.event.DOO": "Dörrarna öppnades",
+  "journey.event.DOC": "Dörrarna stängdes",
+  "journey.event.DUE": "Anländer till hållplatsen",
+  "journey.event.ARS": "Anländning",
+  "journey.event.PDE": "Avgång",
+  "journey.event.PAS": "Körde förbi hållplatsen",
+  "journey.event.WAIT": "Väntar på hållplatsen",
+  "journey.event.TLR": "Trafikljusprioritetsbegäran",
+  "journey.event.TLA": "Svar från trafikljusapparaten",
   "journey.event.DA": "Föraren loggade in",
   "journey.event.DOUT": "Föraren loggade ut",
-  "journey.event.BA": "Kuljettaja valinnut lähtöketjun",
-  "journey.event.BOUT": "Kuljettaja kirjautunut ulos lähtöketjusta",
-  "journey.event.VJA": "Kuljettaja kirjautunut lähtöön",
-  "journey.event.VJOUT": "Kuljettaja kirjautunut ulos lähdöstä",
+  "journey.event.BA": "Föraren valde avgångskedjan",
+  "journey.event.BOUT": "Föraren loggade ut ur avgångskedjan",
+  "journey.event.VJA": "Föraren loggade in till avgången",
+  "journey.event.VJOUT": "Föraren loggade ut ur avgången",
 
   "journey.event.short.ALL": "Alla",
   "journey.event.short.DEPARTURE": "Avgång",
@@ -164,6 +166,15 @@
   "roadcondition.ice": "Isigt",
   "roadcondition.damp-salted": "Förmodligen fuktigt och saltat",
   "roadcondition.ice-slush": "Slaskigt",
+
+  "tlp.requestid":"Begärans id",
+  "tlp.junctionid":"Sid",
+  "tlp.decision":"Beslut",
+  "tlp.attempt":"Försök",
+  "tlp.type":"Typ",
+  "tlp.priority":"Prioritet",
+  "tlp.reason":"Orsak",
+  "tlp.signalgroupnbr":"Signalgruppens nummer",
 
   "auth.login": "Logga in (HSL ID)",
   "auth.logout": "Logga ut",
