--- a/src/languages/ui/en.json
+++ b/src/languages/ui/en.json
@@ -217,6 +217,13 @@
   "general.delay": "Delay",
   "general.subjects": "Subjects",
   "general.subjects.count": "subjects",
+  "general.hide": "Hide",
+  "general.email": "Email",
+  "general.send": "Send",
+
+  "feedback.give": "Give feedback",
+  "feedback.placeholder": "Feedback",
+  "feedback.include.url": "Include current settings of the application in the feedback",
 
   "message.emptyview.network": "The data in this view is unavailable due to a network issue. Make sure you are online and try again.",
   "message.emptyview.authentication": "You need to be logged in to get access to the data in this view, or this account is not authorized.",
