--- a/src/languages/ui/fi.json
+++ b/src/languages/ui/fi.json
@@ -218,6 +218,13 @@
   "general.delay": "Viive",
   "general.subjects": "Kohteet",
   "general.subjects.count": "kohdetta",
+  "general.hide": "Piilota",
+  "general.email": "Sähköposti",
+  "general.send": "Lähetä",
+
+  "feedback.give": "Anna palutetta",
+  "feedback.placeholder": "Palaute",
+  "feedback.include.url": "Sisällytä sovelluksen nykyiset asetukset palautteeseen",
 
   "message.emptyview.network": "Verkko-ongelman takia tämä näkymä ei ole saatavilla. Varmista että sinulla on yhteys verkkoon ja kokeile uudelleen.",
   "message.emptyview.authentication": "Tämän näkymän tiedot vaatii kirjautumista, tai tililläsi ei ole vaadittu oikeustaso.",
