--- a/src/languages/ui/fi.json
+++ b/src/languages/ui/fi.json
@@ -224,7 +224,7 @@
 
   "feedback.give": "Anna palutetta",
   "feedback.placeholder": "Palaute",
-  "feedback.include.url": "Sisällytä sovelluksen nykyiset asetukset palautteeseen",
+  "feedback.includes.url": "Sovelluksen nykyiset asetukset lähetetään palautteen mukana.",
 
   "message.emptyview.network": "Verkko-ongelman takia tämä näkymä ei ole saatavilla. Varmista että sinulla on yhteys verkkoon ja kokeile uudelleen.",
   "message.emptyview.authentication": "Tämän näkymän tiedot vaatii kirjautumista, tai tililläsi ei ole vaadittu oikeustaso.",
