--- a/src/languages/ui/en.json
+++ b/src/languages/ui/en.json
@@ -223,7 +223,8 @@
 
   "feedback.give": "Give feedback",
   "feedback.placeholder": "Feedback",
-  "feedback.includes.url": "The current settings of the application are sent along with the feedback.",
+  "feedback.upload.image": "Upload image",
+  "feedback.includes.url": "The current settings of the application will be sent along with the feedback.",
 
   "message.emptyview.network": "The data in this view is unavailable due to a network issue. Make sure you are online and try again.",
   "message.emptyview.authentication": "You need to be logged in to get access to the data in this view, or this account is not authorized.",
