Send feedback to Slack with webhook WIP.

--- a/src/languages/ui/en.json
+++ b/src/languages/ui/en.json
@@ -220,6 +220,7 @@
   "general.hide": "Hide",
   "general.email": "Email",
   "general.send": "Send",
+  "general.sending": "Sending",
 
   "feedback.give": "Give feedback",
   "feedback.placeholder": "Feedback",
