--- a/src/languages/ui/fi.json
+++ b/src/languages/ui/fi.json
@@ -221,6 +221,7 @@
   "general.hide": "Piilota",
   "general.email": "Sähköposti",
   "general.send": "Lähetä",
+  "general.sending": "Lähettää",
 
   "feedback.give": "Anna palutetta",
   "feedback.placeholder": "Palaute",
