--- a/src/languages/ui/fi.json
+++ b/src/languages/ui/fi.json
@@ -227,6 +227,9 @@
   "feedback.placeholder": "Palaute",
   "feedback.upload.image": "Lataa kuva",
   "feedback.includes.url": "Sovelluksen nykyiset asetukset lähetetään palautteen mukana.",
+  "feedback.error.general": "Virhe palautteen lähetyksessä, yritä myöhemmin uudelleen.",
+  "feedback.error.images": "Virhe kuvien lähetyksessä, yritä myöhemmin uudelleen.",
+  "feedback.success.msg": "Kiitos palautteesta!",
 
   "message.emptyview.network": "Verkko-ongelman takia tämä näkymä ei ole saatavilla. Varmista että sinulla on yhteys verkkoon ja kokeile uudelleen.",
   "message.emptyview.authentication": "Tämän näkymän tiedot vaatii kirjautumista, tai tililläsi ei ole vaadittu oikeustaso.",
