--- a/src/languages/ui/en.json
+++ b/src/languages/ui/en.json
@@ -217,6 +217,7 @@
   "general.delay": "Delay",
   "general.subjects": "Subjects",
   "general.subjects.count": "subjects",
+  "general.close": "Close",
   "general.hide": "Hide",
   "general.email": "Email",
   "general.send": "Send",
