--- a/src/languages/ui/fi.json
+++ b/src/languages/ui/fi.json
@@ -218,12 +218,13 @@
   "general.delay": "Viive",
   "general.subjects": "Kohteet",
   "general.subjects.count": "kohdetta",
+  "general.close": "Sulje",
   "general.hide": "Piilota",
   "general.email": "Sähköposti",
   "general.send": "Lähetä",
   "general.sending": "Lähettää",
 
-  "feedback.give": "Anna palutetta",
+  "feedback.give": "Anna palautetta",
   "feedback.placeholder": "Palaute",
   "feedback.upload.image": "Lataa kuva",
   "feedback.includes.url": "Sovelluksen nykyiset asetukset lähetetään palautteen mukana.",
