Update se language file.

--- a/src/languages/ui/se.json
+++ b/src/languages/ui/se.json
@@ -218,6 +218,19 @@
   "general.delay": "Dröjsmål",
   "general.subjects": "Påverkade",
   "general.subjects.count": "påverkade",
+  "general.close": "Stäng",
+  "general.hide": "Göm",
+  "general.email": "Email",
+  "general.send": "Sänd",
+  "general.sending": "Sänder",
+
+  "feedback.give": "Ge respons",
+  "feedback.placeholder": "Respons",
+  "feedback.upload.image": "Ladda bild",
+  "feedback.includes.url": "Applikationens rådande instaällningar sänds med responsen.",
+  "feedback.error.general": "Ett fel uppstod vid sändningen av respons. Försök igen senare.",
+  "feedback.error.images": "Ett fel uppstod med responsens bilder. Försök igen senare.",
+  "feedback.success.msg": "Tack för din respons!",
 
   "message.emptyview.network": "Denna vy är tom på grund av ett nätfel. Försökra dig om att du har en aktiv nätförbindelse och prova sedan igen.",
   "message.emptyview.authentication": "Datan i denna vy kräver inloggning, eller så har ditt konto inte rättighet.",
