--- a/src/languages/ui/en.json
+++ b/src/languages/ui/en.json
@@ -96,7 +96,7 @@
   "journey.event.DOC": "Door closed",
   "journey.event.DUE": "Arriving at stop",
   "journey.event.ARS": "Arrived at stop",
-  "journey.event.PDE": "Departure",
+  "journey.event.PDE": "Departure from stop",
   "journey.event.PAS": "Passed stop without stopping",
   "journey.event.WAIT": "Waiting at stop",
   "journey.event.TLR": "Traffic light priority request",
