--- a/src/languages/ui/en.json
+++ b/src/languages/ui/en.json
@@ -130,12 +130,12 @@
   "journey.health.not_complete": "The journey is still ongoing.",
   "journey.health.not_ok": "Some aspects of the journey data did not pass validation.",
   "journey.health.data_missing": "One or more aspects of the journey data are missing.",
-  "journey.health.origin_event_missing": "DEP-event missing from origin stop",
-  "journey.health.origin_event_virtual": "DEP-event is derived from vehicle posiitons for origin stop",
+  "journey.health.origin_event_missing": "Departure event missing from origin stop",
+  "journey.health.origin_event_virtual": "Departure event is derived from vehicle posiitons for origin stop",
   "journey.health.destination_event_missing": "ARS-event missing from destination stop",
   "journey.health.destination_event_virtual": "ARS-event is derived from vehicle positions for destination stop",
-  "journey.health.timing_event_missing": "DEP-event missing from timing stop",
-  "journey.health.timing_event_virtual": "DEP-event is derived from vehicle positions for timing stop",
+  "journey.health.timing_event_missing": "Departure event missing from timing stop",
+  "journey.health.timing_event_virtual": "Departure event is derived from vehicle positions for timing stop",
   "journey.health.positions_not_found": "Vehicle positions not found.",
   "journey.health.positions_gap": "Gap found in vehicle positions. Duration in seconds",
   "journey.health.stop_events_not_found": "Stop events not found.",
