--- a/src/languages/ui/se.json
+++ b/src/languages/ui/se.json
@@ -131,12 +131,12 @@
   "journey.health.not_complete": "Resan är ännu på gång.",
   "journey.health.not_ok": "Några aspekter av resans information är inte godkända.",
   "journey.health.data_missing": "En eller flera aspekter av resans data fattas.",
-  "journey.health.origin_event_missing": "DEP-händelsen fattas för första hållplatsen",
-  "journey.health.origin_event_virtual": "DEP-händelsen härleder från fordonets positionshändelser för första hållplatsen",
+  "journey.health.origin_event_missing": "Avgångshändelsen fattas för första hållplatsen",
+  "journey.health.origin_event_virtual": "Avgångshändelsen härleder från fordonets positionshändelser för första hållplatsen",
   "journey.health.destination_event_missing": "ARS-händelsen fattas frän destinationshållplatsen",
   "journey.health.destination_event_virtual": "ARS-händelsen härleder från fordonets positionshändelser för destinationshållplatsen",
-  "journey.health.timing_event_missing": "DEP-händelsen fattas från tidutjämningshållplatsen",
-  "journey.health.timing_event_virtual": "DEP-händelsen härleder från fordonets positionshändelser för tidutjämningshållplatsen",
+  "journey.health.timing_event_missing": "Avgångshändelsen fattas från tidutjämningshållplatsen",
+  "journey.health.timing_event_virtual": "Avgångshändelsen härleder från fordonets positionshändelser för tidutjämningshållplatsen",
   "journey.health.positions_not_found": "Fordonets positionshändelser fattas.",
   "journey.health.positions_gap": "Lucka hittad i fordonets positionshändelser. Längd i sekunder",
   "journey.health.stop_events_not_found": "Hållplatshändelser fattas.",
