Change door status translations.

--- a/src/languages/ui/se.json
+++ b/src/languages/ui/se.json
@@ -45,7 +45,7 @@
   "map.stops.planned_driveby": "Planerad körtid",
   "map.stops.observed_driveby": "Observerad körtid",
   "map.stops.show_in_streetview": "Visa i gatuvy",
-  "map.stops.doors_not_open": "Dörrarna öppnades aldrig på denna hållplats",
+  "map.stops.doors_not_open": "Dörrinformation saknas",
   "map.stops.select_stop": "Välj hållplats",
   "map.stops.stop_routes_select": "Hållplatsens rutter. Välj en rutt för att se dens tidtabeller för denna hållplats.",
   "map.road": "Väg",
@@ -79,7 +79,7 @@
   "journey.show_graph": "Visa fördröjningar och medelhastigheter",
   "journey.stops": "Hållplatser",
   "journey.events": "Händelser",
-  "journey.event.doors_not_open": "Dörrarna öppnades inte",
+  "journey.event.doors_not_open": "Dörrinformation saknas",
   "journey.event.vehicle_not_stopped": "Fordonet stannade inte",
   "journey.type.deadrun": "Inte inloggad",
   "journey.type.signoff": "Inte inloggad",
