--- a/src/languages/ui/fi.json
+++ b/src/languages/ui/fi.json
@@ -45,7 +45,7 @@
   "map.stops.planned_driveby": "Suunniteltu ohitusaika",
   "map.stops.observed_driveby": "Toteutunut ohitusaika",
   "map.stops.show_in_streetview": "Näytä katunäkymässä",
-  "map.stops.doors_not_open": "Ovet eivät avautuneet tällä pysäkillä.",
+  "map.stops.doors_not_open": "Ovitieto ei saatavissa",
   "map.stops.select_stop": "Valitse pysäkki",
   "map.stops.stop_routes_select": "Pysäkin reitit. Valitse reitti nähdäksesi sen aikataulut tästä pysäkiltä.",
   "map.road": "Tie",
@@ -79,7 +79,7 @@
   "journey.show_graph": "Näytä viiveet ja keskinopeudet",
   "journey.stops": "Pysäkit",
   "journey.events": "Tapahtumat",
-  "journey.event.doors_not_open": "Ovet eivät auenneet",
+  "journey.event.doors_not_open": "Ovitieto ei saatavissa",
   "journey.event.vehicle_not_stopped": "Ajoneuvo ei pysähtynyt",
   "journey.type.deadrun": "Kirjautumaton",
   "journey.type.signoff": "Kirjautumaton",
