Different door text based on whether the door sensors worked. Stops solid outline if sensors didn't work.

--- a/src/languages/ui/en.json
+++ b/src/languages/ui/en.json
@@ -45,7 +45,8 @@
   "map.stops.planned_driveby": "Planned drive-by time",
   "map.stops.observed_driveby": "Observed drive-by time",
   "map.stops.show_in_streetview": "Show in street view",
-  "map.stops.doors_not_open": "Door data unavailable.",
+  "map.stops.doors_not_open": "Doors not opened",
+  "map.stops.doors_not_working": "Door data unavailable",
   "map.stops.select_stop": "Select stop",
   "map.stops.stop_routes_select": "The routes for this stop. Select a route to view its timetables through this stop.",
   "map.road": "Road",
@@ -79,7 +80,8 @@
   "journey.show_graph": "Show delays and average speeds.",
   "journey.stops": "Stops",
   "journey.events": "Events",
-  "journey.event.doors_not_open": "Door data unavailable",
+  "journey.event.doors_not_open": "Doors not opened",
+  "journey.event.doors_not_working": "Door data unavailable",
   "journey.event.vehicle_not_stopped": "Vehicle did not stop",
   "journey.type.deadrun": "Deadrun",
   "journey.type.signoff": "Signed out",
