Fix finnish texts.

--- a/src/languages/ui/fi.json
+++ b/src/languages/ui/fi.json
@@ -45,8 +45,8 @@
   "map.stops.planned_driveby": "Suunniteltu ohitusaika",
   "map.stops.observed_driveby": "Toteutunut ohitusaika",
   "map.stops.show_in_streetview": "Näytä katunäkymässä",
-  "map.stops.doors_not_open": "Ovet ei avattu",
-  "map.stops.doors_not_working": "Ovitieto ei saatavissa",
+  "map.stops.doors_not_open": "Ovet eivät avautuneet",
+  "map.stops.doors_not_working": "Ovitietoa ei saatavilla",
   "map.stops.select_stop": "Valitse pysäkki",
   "map.stops.stop_routes_select": "Pysäkin reitit. Valitse reitti nähdäksesi sen aikataulut tästä pysäkiltä.",
   "map.road": "Tie",
@@ -81,8 +81,8 @@
   "journey.show_graph": "Näytä viiveet ja keskinopeudet",
   "journey.stops": "Pysäkit",
   "journey.events": "Tapahtumat",
-  "journey.event.doors_not_open": "Ovet ei avattu",
-  "journey.event.doors_not_working": "Ovitieto ei saatavissa",
+  "journey.event.doors_not_open": "Ovet eivät avautuneet",
+  "journey.event.doors_not_working": "Ovitietoa ei saatavilla",
   "journey.event.vehicle_not_stopped": "Ajoneuvo ei pysähtynyt",
   "journey.type.deadrun": "Kirjautumaton",
   "journey.type.signoff": "Kirjautumaton",
