Changes to route length box based on feeedback.

--- a/src/languages/ui/fi.json
+++ b/src/languages/ui/fi.json
@@ -54,7 +54,7 @@
   "map.weather": "Sää",
   "map.stop_radius": "Pysäkkisäde",
   "map.vehicle_stopped_duration_label": "Pysähtynyt",
-  "map.route_segment.distance_from_prev": "Pituus viime pysäkiltä",
+  "map.route_segment.distance_from_prev": "Pituus ed. pysäkiltä",
   "map.route_segment.distance_from_start": "Pituus alusta",
   "map.route_segment.duration": "Suunniteltu ajoaika",
 
